# libtgcl

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  libtgcl.pc  libtgcl.pc.in
src/: Makefile.am  Makefile.in  class_Array.h  class_ArrayElement.h  class_ArrayElement_i.c  class_ArrayElement_i.h  class_Array_i.c  class_Array_i.h  class_String.h  class_String_i.c  class_String_i.h  dependencies.h  tgcl.h
